--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,3 +2,126 @@ html {
   font-size: 14px;
   font-family: "Open Sans", sans-serif;
 }
+
+/* Navbar Styles */
+
+.container-fluid {
+  padding-left: 1.1rem;
+  padding-right: 1.1rem;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.navbar {
+  font-size: 1.1rem;
+  font-weight: 600;
+  background-color: white;
+}
+
+.navbar-default .navbar-nav > .active > a {
+  color: #339bd1;
+  background-color: white;
+}
+
+.navbar-default .navbar-nav > .active > a:hover {
+  color: #339bd1;
+  background-color: white;
+}
+
+/* Jumbotron Styles */
+
+.jumbotron-bike {
+  background-image: url(../images/jumbotron-bike.jpg);
+  padding-top: 11.85rem;
+  padding-bottom: 11.85rem;
+  color: white;
+  text-align: center;
+}
+
+.jumbotron-bike .container {
+  width: 51.3rem;
+}
+
+.jumbotron-bike h1 {
+  font-family: "Monoton", sans-serif;
+  font-size: 7.1rem;
+  text-shadow: 1px 1px 0 #000, -1px -1px 0 #000, -1px 1px 0 #000, 1px -1px 0 #000;
+}
+
+.jumbotron-bike p {
+  font-size: 1.7rem;
+  font-weight: 400;
+}
+
+.btn-primary {
+  margin-top: 2.8rem;
+  width: 11.4rem;
+  padding: 1.3rem;
+  font-weight: 600;
+  background-color: #399bd1;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+}
+
+.btn-primary:hover {
+  background-color: #399bd1;
+  box-shadow: 0 0 12px rgba(0, 0, 0, 0.9);
+}
+.btn-primary:active {
+  box-shadow: 0 0 0 rgba(0, 0, 0, 0.5);
+}
+
+/* Featured project styles */
+
+.featured-project h2 {
+  font-size: 1.7rem;
+  font-weight: 600;
+  color: #339bd1;
+}
+
+.featured-project img {
+  margin-top: 1.5rem;
+  width: 100%;
+  opacity: 0.7;
+}
+
+.categories h3 {
+  font-weight: 600;
+  color: #339bd1;
+}
+
+.categories li {
+  line-height: 1.4;
+  color: rgba(0, 0, 0, 0.7);
+}
+
+/* Projects styles */
+
+.project {
+  margin-bottom: 5.85rem;
+}
+
+.project img {
+  width: 100%;
+  opacity: 0.7;
+}
+
+/* Footer styles */
+
+.help {
+  background-color: #f3f3f3;
+  padding-top: 5.2rem;
+  padding-bottom: 5.2rem;
+  text-align: center;
+}
+
+.help strong {
+  display: inline-block;
+  font-size: 2.5rem;
+  font-weight: 600;
+  margin-bottom: 1.4rem;
+}
+
+.help p {
+  max-width: 42rem;
+  margin: auto;
+}
