--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,6 +3,10 @@ html {
   font-family: "Open Sans", sans-serif;
 }
 
+img {
+  vertical-align: middle;
+}
+
 /* Navbar Styles */
 
 .container-fluid {
@@ -28,6 +32,7 @@ html {
   background-color: white;
 }
 
+
 /* Jumbotron Styles */
 
 .jumbotron-bike {
@@ -38,17 +43,41 @@ html {
   text-align: center;
 }
 
-.jumbotron-bike .container {
+.jumbotron-beer {
+  background-image: url(../images/jumbotron-beer.jpg);
+  padding-top: 11.85rem;
+  padding-bottom: 11.85rem;
+  color: white;
+  text-align: center;
+}
+
+.jumbotron-flowers {
+  background-image: url(../images/jumbotron-flowers.jpg);
+  padding-top: 11.85rem;
+  padding-bottom: 11.85rem;
+  color: white;
+  text-align: center;
+}
+
+.jumbotron-duffel {
+  background-image: url(../images/jumbotron-duffel.jpg);
+  padding-top: 11.85rem;
+  padding-bottom: 11.85rem;
+  color: white;
+  text-align: center;
+}
+
+.jumbotron .container {
   width: 51.3rem;
 }
 
-.jumbotron-bike h1 {
+.jumbotron h1 {
   font-family: "Monoton", sans-serif;
   font-size: 7.1rem;
   text-shadow: 1px 1px 0 #000, -1px -1px 0 #000, -1px 1px 0 #000, 1px -1px 0 #000;
 }
 
-.jumbotron-bike p {
+.jumbotron p {
   font-size: 1.7rem;
   font-weight: 400;
 }
@@ -66,8 +95,15 @@ html {
   background-color: #399bd1;
   box-shadow: 0 0 12px rgba(0, 0, 0, 0.9);
 }
+
 .btn-primary:active {
   box-shadow: 0 0 0 rgba(0, 0, 0, 0.5);
+}
+
+@media only screen and (max-width: 470px) {
+  .jumbotron h1 {
+    font-size: 5.7rem;
+  }
 }
 
 /* Featured project styles */
@@ -79,9 +115,20 @@ html {
 }
 
 .featured-project img {
-  margin-top: 1.5rem;
   width: 100%;
   opacity: 0.7;
+  transition: all 500ms ease-in;
+}
+
+.featured-project img:hover {
+  opacity: 1;
+  transform: scale(1.3);
+}
+
+.featured-project .image-container {
+  margin-top: 1.5rem;
+  height: 19rem;
+  overflow: hidden;
 }
 
 .categories h3 {
@@ -100,10 +147,22 @@ html {
   margin-bottom: 5.85rem;
 }
 
+.project .image-container {
+  height: 13.5rem;
+  overflow: hidden;
+}
+
 .project img {
   width: 100%;
   opacity: 0.7;
+  transition: all 500ms ease-in;
 }
+
+.project img:hover {
+  opacity: 1;
+  transform: scale(1.3);
+}
+
 
 /* Footer styles */
 
