--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -105,7 +105,10 @@ img {
 
 @media only screen and (max-width: 470px) {
   .jumbotron h1 {
-    font-size: 5.7rem;
+    font-size: 4.5rem;
+  }
+  .btn-primary {
+    padding: 1rem;
   }
 }
 
